<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.gilberto-torrezan</groupId>
	<artifactId>feel-vision</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>war</packaging>
	<name>Feel Vision</name>
	<description>A GWT, App Engine and Google Cloud Vision API demo - with a taste of material design</description>
	<url>https://github.com/gilberto-torrezan/feel-vision</url>
	<inceptionYear>2016</inceptionYear>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<maven.compiler.source>1.7</maven.compiler.source>
		<maven.compiler.target>1.7</maven.compiler.target>

		<appengine.target.version>1.9.36</appengine.target.version>
		<gwtVersion>2.7.0</gwtVersion>
	</properties>

	<dependencies>
		<dependency>
	    		<groupId>commons-codec</groupId>
	    		<artifactId>commons-codec</artifactId>
	    		<version>1.10</version>
		</dependency>

		<!-- Java logging binding to avoid warning on libs which use SLF4J -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-jdk14</artifactId>
			<version>1.7.12</version>
		</dependency>

		<!-- GWT -->
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<version>${gwtVersion}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-codeserver</artifactId>
			<version>${gwtVersion}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-dev</artifactId>
			<version>${gwtVersion}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.github.gwtmaterialdesign</groupId>
			<artifactId>gwt-material-addins</artifactId>
			<version>1.5.1-SNAPSHOT</version>
		</dependency>

		<!-- GWT Views -->
		<dependency>
			<groupId>com.github.gilberto-torrezan</groupId>
			<artifactId>gwt-views</artifactId>
			<version>1.3.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.github.gilberto-torrezan</groupId>
			<artifactId>gwt-views</artifactId>
			<version>1.3.2</version>
			<classifier>sources</classifier>
			<scope>provided</scope>
		</dependency>

		<!-- REST -->
		<dependency>
		    <groupId>com.fasterxml.jackson.jaxrs</groupId>
		    <artifactId>jackson-jaxrs-base</artifactId>
		    <version>2.6.4</version>
		</dependency>
		<dependency>
		    <groupId>com.fasterxml.jackson.jaxrs</groupId>
		    <artifactId>jackson-jaxrs-json-provider</artifactId>
		    <version>2.6.4</version>
		</dependency>
		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-annotations</artifactId>
		    <version>2.6.4</version>
		</dependency>
		<dependency>
			<groupId>javax.ws.rs</groupId>
			<artifactId>javax.ws.rs-api</artifactId>
			<version>2.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.containers</groupId>
			<artifactId>jersey-container-servlet</artifactId>
			<version>2.22.1</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-json-jackson</artifactId>
			<version>2.22.1</version>
		</dependency>
		<dependency>
			<groupId>org.fusesource.restygwt</groupId>
			<artifactId>restygwt</artifactId>
			<version>2.1.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.fusesource.restygwt</groupId>
			<artifactId>restygwt</artifactId>
			<version>2.1.1</version>
			<classifier>sources</classifier>
			<scope>provided</scope>
		</dependency>

		<!-- GAE -->
		<dependency>
			<groupId>com.google.appengine</groupId>
			<artifactId>appengine-api-1.0-sdk</artifactId>
			<version>${appengine.target.version}</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.5</version>
			<scope>provided</scope>
		</dependency>

		<!-- Google Vision API -->
		<dependency>
			<groupId>com.google.apis</groupId>
			<artifactId>google-api-services-vision</artifactId>
			<version>v1-rev15-1.21.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.api-client</groupId>
			<artifactId>google-api-client</artifactId>
			<version>1.21.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.api-client</groupId>
			<artifactId>google-api-client-appengine</artifactId>
			<version>1.21.0</version>
		</dependency>
	</dependencies>
	
	<scm>
		<connection>scm:git:git@github.com:gilberto-torrezan/feel-vision.git</connection>
		<developerConnection>scm:git:git@github.com:gilberto-torrezan/feel-vision.git</developerConnection>
		<url>git@github.com:gilberto-torrezan/feel-vision.git</url>
	</scm>

	<developers>
		<developer>
			<name>Gilberto Torrezan Filho</name>
			<email>gilberto.torrezan@gmail.com</email>
			<organization>Gilberto Torrezan Filho</organization>
			<organizationUrl>https://github.com/gilberto-torrezan</organizationUrl>
		</developer>
	</developers>

	<profiles>
		<profile>
			<id>gae</id>
			<build>
				<plugins>
					<!-- Google App Engine plugin -->
					<plugin>
						<groupId>com.google.appengine</groupId>
						<artifactId>appengine-maven-plugin</artifactId>
						<version>${appengine.target.version}</version>
						<configuration>
							<jvmFlags>
								<jvmFlag>-Ddatastore.backing_store=${project.basedir}/appengine_base.bin</jvmFlag>
							</jvmFlags>
							<enableJarClasses>false</enableJarClasses>
							<fullScanSeconds>-1</fullScanSeconds>
						</configuration>
					</plugin>
				</plugins>

				<pluginManagement>
					<plugins>
						<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
						<plugin>
							<groupId>org.eclipse.m2e</groupId>
							<artifactId>lifecycle-mapping</artifactId>
							<version>1.0.0</version>
							<configuration>
								<lifecycleMappingMetadata>
									<pluginExecutions>
										<pluginExecution>
											<pluginExecutionFilter>
												<groupId>
													com.google.appengine
												</groupId>
												<artifactId>
													appengine-maven-plugin
												</artifactId>
												<versionRange>
													[1.9.1,)
												</versionRange>
												<goals>
													<goal>
														endpoints_get_discovery_doc
													</goal>
												</goals>
											</pluginExecutionFilter>
											<action>
												<ignore></ignore>
											</action>
										</pluginExecution>
									</pluginExecutions>
								</lifecycleMappingMetadata>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
	</profiles>

	<build>
		<!-- Generate compiled stuff in the folder used for development mode -->
		<outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>

		<plugins>
			<!-- GWT Maven Plugin -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>${gwtVersion}</version>
				<dependencies>
					<dependency>
						<groupId>com.google.gwt</groupId>
						<artifactId>gwt-user</artifactId>
						<version>${gwtVersion}</version>
					</dependency>
					<dependency>
						<groupId>com.google.gwt</groupId>
						<artifactId>gwt-dev</artifactId>
						<version>${gwtVersion}</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
						</goals>

						<!-- Plugin configuration. There are many available options, see gwt-maven-plugin 
							documentation at codehaus.org -->
						<configuration>
							<!-- URL that should be automatically opened in the GWT shell (gwt:run). -->
							<runTarget>index.html</runTarget>
							<modules>
								<module>com.github.gilbertotorrezan.feelvision.FeelVision</module>
							</modules>
							<logLevel>INFO</logLevel>
							<failOnError>true</failOnError>
							<closureCompiler>true</closureCompiler>
							<persistentunitcache>false</persistentunitcache>
							<extraJvmArgs>-Xms512m -Xmx8g -XX:MaxPermSize=512m</extraJvmArgs>
							<fragmentCount>10</fragmentCount>
							<localWorkers>8</localWorkers>
							<extra>./gwt-extra</extra>
							<gen>./gwt-generated</gen>
							<deploy>./gwt-deploy</deploy>
							<persistentunitcachedir>./gwt-unitCache</persistentunitcachedir>
							<optimizationLevel>9</optimizationLevel>
							<copyWebapp>true</copyWebapp>
							<gwtSdkFirstInClasspath>true</gwtSdkFirstInClasspath>
						</configuration>
					</execution>
				</executions>

			</plugin>

			<!-- War Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<goals>
							<goal>exploded</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<archiveClasses>true</archiveClasses>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
